# budgie

./: .env  Cargo.toml  budgie.db  claude.txt
.sqlx/: query-0ccff24b36ec82cf36aa9be6d228a4da36138d6e31fd8e126c30748128cded0a.json  query-c7e1cc5396ec6c48522abfdc9a701691d1c58047b1d1bcaed28d56572be77bff.json
migrations/: 20250626014015_initial_schema.sql
src/: main.rs
src/budget/: domain.rs  mod.rs  persistence.rs  views.rs
static/: styles.css
templates/: base.html  dashboard.html  hello.html
