[package]
name = "budgie"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-embed = "0.1.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
rust-embed = { version = "8.7.2", features = ["axum", "axum-ex"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
    "migrate",
] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.17.0", features = ["v7"] }
